Fix: Improve Color Contrast of Multi-Select Field Focus Indicator for Accessibility (#7932)

--- a/src/DonationForms/resources/registrars/templates/styles.module.scss
+++ b/src/DonationForms/resources/registrars/templates/styles.module.scss
@@ -31,8 +31,21 @@
 }
 
 .multiSelectField {
+    &:hover {
+        :global {
+            .givewp-fields-multiSelect__option--is-focused {
+                box-shadow: none;
+            }
+        }
+    }
+
     :global {
         .givewp-fields-multiSelect {
+            &__input {
+                padding-bottom: 8px;
+                margin-bottom: -8px;
+            }
+
             &__control {
                 border-color: rgb(102, 102, 102);
                 box-shadow: none;
@@ -82,9 +95,21 @@
                 background-color: rgb(102, 102, 102);
             }
 
+            &__menu {
+                margin-top: 0;
+            }
+
+            &__menu-list {
+                padding: 0;
+            }
+
             &__option {
+                color: var(--givewp-grey-700);
+
                 &--is-focused {
                     background-color: var(--givewp-grey-25);
+                    box-shadow: inset 0 0 0 var(--outline-width) var(--form-element-focus-color);
+                    border-radius: 4px;
                     cursor: pointer;
                 }
             }
